Remove configuration & classes related to lists and their depndencies (concepts and concordances)
