# src/main/java/com/ft/universalpublishing/documentstore/model/read/Context.java
@@ -29,10 +29,6 @@ public class Context {
 
   private HttpHeaders httpHeaders;
 
-  private String conceptUUID;
-  private String listType;
-  private String searchTerm;
-
   private List<Document> documents;
 
   public Context() {
@@ -70,29 +66,5 @@ public class Context {
 
   public Object getParameter(String key) {
     return map.get(key);
-  }
-
-  public void setConceptUUID(String conceptUUID) {
-    this.conceptUUID = conceptUUID;
-  }
-
-  public void setListType(String listType) {
-    this.listType = listType;
-  }
-
-  public void setSearchTerm(String searchTerm) {
-    this.searchTerm = searchTerm;
-  }
-
-  public String getConceptUUID() {
-    return this.conceptUUID;
-  }
-
-  public String getListType() {
-    return this.listType;
-  }
-
-  public String getSearchTerm() {
-    return this.searchTerm;
   }
 }
